--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "16.13.2"
+  },
+
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
